<resources>
    <string name="app_name">Derive Capital</string>

    <string name="derive">Derive Capital</string>

    // splash activities
    <string name="we_are">We\'re so glad you\'re here!</string>
    <string name="your_data">Your data is encrypted and SSL secured</string>
    <string name="a_budget">A budget is telling your money where to go instead of wondering where it went</string>
    <string name="click_here">Click here to be onboarded!</string>


    // sign up activity
    <string name="Lets_get_you_signed_up">Lets get you signed up</string>
    <string name="country_code">+91</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_must_contain">Password must contain at least 8 characters.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reference">Reference (Optional)</string>
    <string name="term_and_conditions">By signing up, you are agreeing to our Terms, Conditions and Privacy Policy.</string>
    <string name="or">----------OR----------</string>
    <string name="sign_up_with">SIGN UP WITH</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>


    // Otp verification activity
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="enter_the_code">Enter the code send to</string>
    <string name="number">1234567890</string>
    <string name="did_not_receive_code">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="verify">Verify</string>


    // wealth activity
    <string name="link_account">Link Accounts</string>
    <string name="wealth">Wealth</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="stocks">Stocks</string>
    <string name="fixed">Fixed</string>
    <string name="deposit">Deposit</string>
    <string name="ppf">PPF</string>
    <string name="epf">EPF</string>
    <string name="nps">NPS</string>
    <string name="real_estate">Real Estate</string>
    <string name="gold">Gold</string>
    <string name="bonds">Bonds</string>
    <string name="bank_accounts">Bank Accounts/Cash</string>
    <string name="bank">Bank</string>
    <string name="account">Account</string>
    <string name="cash">Cash</string>
    <string name="borrow">Borrow</string>
    <string name="credit_card">Credit Card</string>
    <string name="loans">Loans</string>

    //facebook
    <string name="facebook_app_id">1363845314015894</string>
    <string name="fb_login_protocol_scheme">fb1363845314015894</string>


    //twitter
    <string name="Api_key">OCpOGTmGoPIaC860j8iHD02BC</string>
    <string name="Api_Secret">b37B06p3RrVEgEhzj04fw4raycr4uxCgwfV7AbKTmGst1lk8vw</string>

    //dash board activity
    <string name="welcome">Welcome,</string>
    <string name="your_net_worth">Your Net Worth</string>
    <string name="glad_to">Glad to have you onboard the Starship rocket</string>
    <string name="pay">Pay</string>

    <string name="we_are_on">We are one a journey to start, manage and clean up your personal finance.</string>

    // payment activity
    <string name="payments">Payments</string>
    <string name="payment_history">Payment History</string>
    <string name="no_payment_history">No Payment History</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="to_protect">To protect your security, we do not store your UPI PIN or full bank account number.</string>
    <string name="learn_more">Learn More</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="help">Help</string>
    <string name="new_payment">New Payment</string>
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="firstTime">FirstTimeUser</string>
    <string name="great">"Great "</string>


    // user profile
    <string name="name">"Name :-"</string>
    <string name="state">"State :-"</string>
    <string name="gender">"Gender :-"</string>
    <string name="pincode">"Pincode :-"</string>
    <string name="save">"Save"</string>
    <string name="dob">"D O B :-"</string>
    <string name="link">"Link Accounts"</string>
    <string name="number2">"Phone Number :-"</string>
    <string name="select_dob">Select Date Of Birth</string>
    <string name="great_now">Great, now help us know you more.</string>


    // Mobile Verification and Stack Pin

    <string name="verify_the_code_sent_to_your_mobile_number">Verify the code sent to your mobile number</string>
    <string name="enter_the_code_we_just_sent_to_91_mob">Enter the code we just sent to +91 mob.</string>
    <string name="proceed">Proceed</string>
    <string name="change_number">Change number</string>
    <string name="resend_code">resend code</string>
    <string name="nameUser">Name</string>

    <string-array name="Values">

        <item>High</item>
        <item>medium</item>
        <item>low</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>