<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentsActivity"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/arrow"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/payments"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/squareblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/payment_history"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/history" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/no_payment_history"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/squareblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/payment_methods"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/image2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/text3"
            android:layout_margin="20dp"
            android:background="@drawable/security" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/image2"
            android:fontFamily="@font/montserrat"
            android:text="@string/to_protect"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text4"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/image2"
            android:fontFamily="@font/montserrat"
            android:text="@string/learn_more"
            android:textColor="@color/blue"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/add_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/learn_more"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/learn_more">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_margin="15dp"
                android:layout_toRightOf="@id/image2"
                android:fontFamily="@font/montserrat"
                android:text="@string/add_payment_method"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/layout3"
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/squareblue">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/question"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:layout_margin="15dp"
            android:textStyle="bold"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/help"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bhim_upi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <Button
        android:id="@+id/PayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundgbluebutton"
        android:drawableLeft="@drawable/coin"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/new_payment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>