<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@drawable/greensquare">

    <ImageView
        android:id="@+id/visibility"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/visibility"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/user9"/>

    <ImageView
        android:id="@+id/notifications"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/bell"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_above="@+id/text1"
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"
            />


            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/greysquare"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_net_worth"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />


            <TextView
                android:id="@+id/net_worth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="_"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                />


        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/rocket"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-10dp"
            android:layout_above="@+id/text1"/>

    </LinearLayout>


    <TextView
        android:id="@+id/text1"
        android:layout_above="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glad_to"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:layout_marginBottom="-10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text2"
        android:layout_above="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_are_on"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:id="@+id/wealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"
                android:src="@drawable/wealth"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wealth"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/dc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_toRightOf="@+id/wealth">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"
                android:src="@drawable/dc"/>

        </LinearLayout>


        <LinearLayout
            android:layout_toRightOf="@+id/dc"
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"
                android:src="@drawable/money"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>


    </RelativeLayout>



</RelativeLayout>